# llama-stack-provider-kft

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  demo.ipynb  instructlab_kft.yaml  pyproject.toml  requirements.txt  run.yaml  train.py
.github/workflows/: build-and-publish-image.yml  pre-commit.yml  test-external-providers.yml
manifests/base/: kustomization.yaml
manifests/base/manager/: deployment.yaml  service.yaml
manifests/base/rbac/: cluster-role-binding.yaml  role.yaml  service-account.yaml
providers.d/remote/post_training/: instructlab_kft.yaml
src/llama_stack_provider_kft/: __init__.py  config.py  kft_adapter.py  provider.py
src/utils/: cluster_setup.py  data_upload.py  ilab_kft.py
utils/: cluster_setup.py  data_upload.py  ilab_kft.py
