[project]
name = "llama-stack-provider-kft"
version = "0.1.0"
description = "Llama Stack Provider for Distributed InstructLab Training using KFT"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.ruff]
extend-exclude = ["*.ipynb"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
